WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274860
[Site Isolation] Fix `_executeEditCommand:`
https://bugs.webkit.org/show_bug.cgi?id=274860
Summary
[Site Isolation] Fix `_executeEditCommand:`
Charlie Wolfe
Reported
2024-05-29 14:26:59 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-29 14:47:10 PDT
<
rdar://problem/128966041
>
Charlie Wolfe
Comment 2
2024-05-29 14:48:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29250
EWS
Comment 3
2024-05-30 09:51:16 PDT
Committed
279524@main
(cd6c80aa02f3): <
https://commits.webkit.org/279524@main
> Reviewed commits have been landed. Closing PR #29250 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug