[Site Isolation] Fix `_executeEditCommand:` https://bugs.webkit.org/show_bug.cgi?id=274860 rdar://128966041

Reviewed by Alex Christensen and Pascoe.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::executeEditCommand):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, SynchronouslyExecuteEditCommandSelectAll)):

Canonical link: https://commits.webkit.org/279524@main